2002-06-26  Larry Jones  <lawrence.jones@eds.com>

	* tag.c (check_fileproc): When checking up-to-date, T_REMOVE_ENTRY
	is also a valid status.
	(Reported by David Everly <David.Everly@wcom.com>.)
	* sanity.sh (tagc): New tests for above.

2002-06-18  Larry Jones  <lawrence.jones@eds.com>

	* update.c (patch_file): Don't patch if diff bigger than file.
	Don't bother adjusting the permission on the diff output if
	we're not going to use it.


2002-06-18  Derek Price  <oberon@umich.edu>

	* server.c: Handle HPUX password expiration fields in the passwd
	string in case we are set up on a server with NIS passwords served
	from HPUX.
	(Original patch from John Cavanaugh <john_cavanaugh@agilent.com>.)

2002-06-17  Larry Jones  <lawrence.jones@eds.com>
	    and Jonathan Kamens  <jik@kamens.brookline.ma.us>

	* commit.c (commit_fileproc, commit_direntproc): Don't try to call
	an editor to get the log message if running as a server.  Instead,
	just use an empty log message.
	* import.c (import): Ditto.

	* import.c (import): In client mode, always send a message to the
	server, even if it's empty (this parallels a change made by Larry
	Jones to commit.c on May 7).

2002-05-31  Larry Jones  <lawrence.jones@eds.com>

	* rcs.c: Conditionally define MAP_FAILED for old systems that don't
	have it in <mman.h>.
	(Reported by jeremy brand <jeremy@earth.care2.com>.)

2002-05-24  Larry Jones  <lawrence.jones@eds.com>

	* rcscmds.c (diff_exec): Add a -- before the first file name just
	in case it looks like an option.
	(Reported by Zooko <zooko@zooko.com>.)

	* rcscmds.c (diff_execv): Remove -- same as diff_exec.  Change
	only caller.
	* cvs.h: Ditto.

2002-05-23  Larry Jones  <lawrence.jones@eds.com>

	* cvs.h (strcat_filename_onto_homedir): Make arguments const.
	* filesubr.c (strcat_filename_onto_homedir): Make arguments const,
	move more code here from callers, change all callers.

2002-05-22  Derek Price  <oberon@umich.edu>

	* cvs.h: Add prototype for this...